<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical"
    android:gravity="top">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/TextInputLayout_Nombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_nombre">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/EditText_Nombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    />

            </com.google.android.material.textfield.TextInputLayout>

            <DatePicker
                android:id="@+id/DatePicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margen_superior">

            </DatePicker>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/TextInputLayout_Tel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_tel">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/EditText_Telefono"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/TextInputLayout_Email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_email"
                android:layout_marginTop="@dimen/margen_superior">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/EditText_Email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/TextInputLayout_Descripcion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_descripcion"
                android:layout_marginTop="@dimen/margen_superior"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/EditText_Descripcion"
                    android:layout_width="match_parent"
                    android:layout_height="90dp"

                    />
            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/boton_siguiente"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/texto_boton"
                android:layout_marginTop="@dimen/margen_superior"
                android:onClick="touch_boton">

            </Button>


        </LinearLayout>


    </ScrollView>


</LinearLayout>